<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.t00055219.kawaii_converter.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fr"
        android:id="@+id/fromLabel"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/valueLabel"
        android:layout_alignEnd="@+id/valueLabel"
        android:contextClickable="true"
        android:textColor="@color/abc_btn_colored_borderless_text_material"
        android:textStyle="bold" />

    <TextView
        android:text="@string/va"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/valueLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/toLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/abc_btn_colored_borderless_text_material"
        android:textStyle="bold" />

    <TextView
        android:text="@string/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:id="@+id/toLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/fromLabel"
        android:layout_alignLeft="@+id/fromLabel"
        android:layout_alignStart="@+id/fromLabel"
        android:layout_alignRight="@+id/valueLabel"
        android:layout_alignEnd="@+id/valueLabel"
        android:textStyle="bold"
        android:textColor="@color/abc_btn_colored_borderless_text_material" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_alignBottom="@+id/valueLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/editText1"
        android:layout_alignLeft="@+id/unitBSpinner"
        android:layout_alignStart="@+id/unitBSpinner"
        android:hint="@string/entVal"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:text="@string/con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/convertButton"
        android:layout_below="@+id/valueLabel"
        android:layout_alignLeft="@+id/toLabel"
        android:layout_alignStart="@+id/toLabel"
        android:textSize="24sp"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/res"
        android:id="@+id/resultsLabel"
        android:layout_below="@+id/convertButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:textSize="50dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/unitASpinner"
        android:spinnerMode="dropdown"
        android:entries="@array/tempValue"
        android:layout_alignTop="@+id/fromLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/fromLabel"
        android:layout_toEndOf="@+id/fromLabel"
        android:layout_above="@+id/toLabel"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/unitBSpinner"
        android:spinnerMode="dropdown"
        android:entries="@array/tempValue"
        android:layout_alignTop="@+id/toLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/valueLabel"
        android:layout_toRightOf="@+id/toLabel"
        android:layout_toEndOf="@+id/toLabel" />

</RelativeLayout>
